--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "description": "",
   "dependencies": {
     "@supabase/supabase-js": "^2.54.0",
+    "animejs": "^4.1.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.0"
   },
   "devDependencies": {
