SECURITY: Remove exposed API key and update .gitignore to prevent future exposure

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,11 @@ Thumbs.db
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Security - API Keys and Secrets
+temp_key.txt
+*_key.txt
+*_key.*
+api_keys.txt
+secrets.txt
+*.key
